--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,83 @@
+body {
+  margin: 0;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+.entry {
+  padding: 10px;
+  font-family: 'Courier New';
+  
+  margin-top: 25px;
+}
 
 
+link{
+  display: inline-block;
+  padding-right: 50px;
+}
+
+button{
+  width: 150px;
+  height: 35px;
+  background-color:blue;
+  color: white;
+}
+input{
+  width: 150px;
+  height: 25px;
+  background-color: white;
+  color: black;
+}
+
+
+li{
+  display: inline-block;
+  width: 25px;
+  border: 1px solid blueviolet;
+  margin: 0;
+  list-style: none;
+  padding: 4px;
+}
+
+
+body {
+  background-color: white;
+  color: black;
+  text-align: center;
+}
+
+
+
+
+a{
+  text-decoration: none;
+}
+a:hover{
+  border-bottom: 2px solid white;
+  cursor: pointer;
+  background-color: whitesmoke;
+}
+
+  
+h1,h2,h3,h4,h5,h6 {
+      margin: 0;
+      font-family: 'Times New Roman';
+}
+  
+
+img{
+  width: 30%;
+  height: auto;
+}
 
 @media screen and (min-width: 1200px) and (max-width: 4000px)
 {     
   body{
-      width: 1140px;
+      width: 1140px;;
   }
 }
 
